--- a/AndressaModelos/Web.config
+++ b/AndressaModelos/Web.config
@@ -80,7 +80,8 @@
 
   <connectionStrings>
     <remove name="umbracoDbDSN" />
-    <add name="umbracoDbDSN" connectionString="server=laryrosql.cujrfge80eqq.us-west-2.rds.amazonaws.com,1433;database=Dev.Modelos;user id=laryro;password=lr0926!!" providerName="System.Data.SqlClient" />
+    <!--<add name="umbracoDbDSN" connectionString="server=laryrosql.cujrfge80eqq.us-west-2.rds.amazonaws.com,1433;database=Dev.Modelos;user id=laryro;password=lr0926!!" providerName="System.Data.SqlClient" />-->
+    <add name="umbracoDbDSN" connectionString="server=stem.arvixe.com;database=laryro.dev.modelos;user id=laryro;password=loved42be" providerName="System.Data.SqlClient" />
     <!-- Important: If you're upgrading Umbraco, do not clear the connection string / provider name during your web.config merge. -->
   </connectionStrings>
 
